[gd_scene load_steps=7 format=3 uid="uid://14gd5uhhh4y2"]

[ext_resource type="Script" path="res://Spikes.gd" id="1_4eohr"]
[ext_resource type="PackedScene" uid="uid://c53bmsws2shc" path="res://hit_effect.tscn" id="2_4j832"]
[ext_resource type="Texture2D" uid="uid://baahdddbgl8t2" path="res://Artwork/Effects/spikes-Sheet.png" id="2_qcs03"]

[sub_resource type="Animation" id="Animation_42v3c"]
resource_name = "spikeRise"
length = 1.5
loop_mode = 2
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7volt"]
_data = {
"spikeRise": SubResource("Animation_42v3c")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7geh"]
size = Vector2(64, 52)

[node name="Spikes" type="CharacterBody2D"]
scale = Vector2(2, 1.5)
script = ExtResource("1_4eohr")
hit_effect = ExtResource("2_4j832")

[node name="SpikesSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_qcs03")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../SpikesSprite")
speed_scale = 2.5
libraries = {
"": SubResource("AnimationLibrary_7volt")
}

[node name="SpikesHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikesHitbox"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_j7geh")
debug_color = Color(0.0509804, 0.568627, 0.847059, 0.419608)

[node name="RetractTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="EnemyDetector" type="RayCast2D" parent="."]

[connection signal="area_entered" from="SpikesHitbox" to="." method="_on_spikes_hitbox_area_entered"]
[connection signal="timeout" from="RetractTimer" to="." method="_on_retract_timer_timeout"]
